--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
  <section class='container'>
   <hgroup>
-    <h1>Welcome to your static httpd application on OpenShift ver2</h1>
+    <h1>This is my Awesome OpenShift Application</h1>
   </hgroup>
   <div class="row">
     <section class='col-xs-12 col-sm-6 col-md-6'>
