--- a/index.html
+++ b/index.html
@@ -209,7 +209,8 @@
 
  <section class='container'>
   <hgroup>
-    <h1>This is my Awesome OpenShift Application v4</h1>
+    <h1>This is my Awesome OpenShift Application v5</h1>
+    <h1>Just do it</h1>
   </hgroup>
   <div class="row">
     <section class='col-xs-12 col-sm-6 col-md-6'>
